# germ

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: app.rs  asciicast.rs  lib.rs  main.rs  sequence.rs  termsheets.rs
tests/: germ.rs
