[package]
name = "asciicast-gen"
version = "0.1.0"
authors = ["Christopher Field <cfield2@gmail.com>"]
description = "Generate asciicast files without using the asciinema record functionality"
license = "GPL-3.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/volks73/asciicast-gen"
documentation = "https://volks73.github.io/asciicast-gen"
categories = ["development-tools"]
keywords = ["asciinema", "asciicast", "json", "cli", "application"]
homepage = "https://github.com/volks73/asciicast-gen"
exclude = ["/.github"]

[[bin]]
name = "asciicast-gen"

[dependencies]
anyhow = "1.0"
clap-verbosity-flag = "0.3"
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
structopt = "0.3"

[badges]
is-it-maintained-issue-resolution = { repository = "volks73/asciicast-gen" }
is-it-maintained-open-issues = { repository = "volks73/asciicast-gen" }
