[package]
name = "germ"
version = "0.1.0"
authors = ["Christopher Field <cfield2@gmail.com>"]
description = "Generate terminal session recording files without rehearsing and recording"
license = "GPL-3.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/volks73/germ"
documentation = "https://volks73.github.io/germ"
categories = ["development-tools"]
keywords = ["asciinema", "asciicast", "termsheet", "json", "cli", "application", "terminal", "recording"]
homepage = "https://github.com/volks73/germ"
exclude = ["/.github"]

[[bin]]
name = "germ"

[dependencies]
anyhow = "1.0"
atty = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
shellwords = "1.1.0"
structopt = "0.3"
strum = { version = "0.20", features = ["derive"] }

[badges]
is-it-maintained-issue-resolution = { repository = "volks73/germ" }
is-it-maintained-open-issues = { repository = "volks73/germ" }
