[package]
name = "germ"
version = "0.1.0"
authors = ["Christopher Field <cfield2@gmail.com>"]
description = "Generate terminal session recording files without rehearsing and recording"
license = "GPL-3.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/volks73/germ"
documentation = "https://volks73.github.io/germ"
categories = ["development-tools"]
keywords = ["asciinema", "asciicast", "termsheet", "json", "cli", "application", "terminal", "recording"]
homepage = "https://github.com/volks73/germ"
exclude = ["/.github"]

[[bin]]
name = "germ"

[dependencies]
anyhow = "1"
atty = ">0.2.14"
clap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellwords = "1.1"
structopt = "0.3"
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
assert_cmd = "1"
assert_fs = "1"
predicates = "1"

[badges]
is-it-maintained-issue-resolution = { repository = "volks73/germ" }
is-it-maintained-open-issues = { repository = "volks73/germ" }
